traefik/manual/middleware-dashboard-rewrite.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-rewrite
  namespace: traefik
spec:
  addPrefix:
    prefix: /dashboard
