traefik/manual/middlewares-redirect-scheme.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-redirect-scheme
  namespace: traefik-v2
spec:
  redirectScheme:
    scheme: https
    permanent: true
    port: "443"
