traefik/manual/svc-dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: traefik
    meta.helm.sh/release-namespace: default
    metallb.universe.tf/ip-allocated-from-pool: default
  creationTimestamp: "2024-04-02T14:29:43Z"
  labels:
    app.kubernetes.io/instance: traefik-default
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: traefik
    helm.sh/chart: traefik-26.1.0
  name: traefik
  namespace: default
  resourceVersion: "18264"
  uid: 928a2599-1496-47df-8e20-ebafc93b1908
spec:
  allocateLoadBalancerNodePorts: true
  clusterIP: 10.152.183.107
  clusterIPs:
  - 10.152.183.107
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: web
    nodePort: 31626
    port: 80
    protocol: TCP
    targetPort: web
  - name: websecure
    nodePort: 32148
    port: 443
    protocol: TCP
    targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-default
    app.kubernetes.io/name: traefik
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.0.151
