traefik/manual/ingress-route-dashboard-traefik.yaml
# dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik-v2
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`traefik.lair.pangarabbit.com`) || Host(`dashboard-traefik.lair.pangarabbit.com`) || Host(`192.168.0.151`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
